force-app/main/default/objects/Invoice/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <description>Determines the post-payment automation branch: Physical products trigger shipping (Sendcloud carrier + tracking), Digital products trigger service/license activation.</description>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
                <default>true</default>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>