force-app/main/default/objects/Invoice/fields/Has_Digital__c.field-meta.xml
<CustomField>
    <fullName>Has_Digital__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, this invoice contains digital/SaaS items requiring license activation. Can be combined with Has_Physical__c for mixed orders.</description>
    <label>Has Digital Items</label>
    <type>Checkbox</type>
</CustomField>