force-app/main/default/objects/Invoice/fields/Has_Physical__c.field-meta.xml
<CustomField>
    <fullName>Has_Physical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this invoice contains physical/hardware items requiring DHL shipping. Can be combined with Has_Digital__c for mixed orders.</description>
    <label>Has Physical Items</label>
    <type>Checkbox</type>
</CustomField>