force-app/main/default/objects/Invoice/fields/Lexoffice_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Lexoffice_Invoice_Id__c</fullName>
    <description>lexoffice invoice resource id (UUID) returned by POST /v1/invoices. Set by LexofficeInvoiceService on successful publish (ADR-030).</description>
    <externalId>true</externalId>
    <label>Lexoffice Invoice Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>