force-app/main/default/objects/Invoice/fields/Lexoffice_Published_At__c.field-meta.xml
<CustomField>
    <fullName>Lexoffice_Published_At__c</fullName>
    <description>Timestamp when this invoice was successfully published to lexoffice (ADR-030).</description>
    <label>Lexoffice Published At</label>
    <type>DateTime</type>
</CustomField>