force-app/main/default/objects/Invoice/fields/Lexoffice_Status__c.field-meta.xml
<CustomField>
    <fullName>Lexoffice_Status__c</fullName>
    <description>Publish state of this invoice to lexoffice. Set by LexofficeInvoiceService (ADR-030).</description>
    <label>Lexoffice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Published</fullName>
                <default>true</default>
                <label>Not Published</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Publish Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>