force-app/main/default/objects/Invoice/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Timestamp populated by MuleSoft when Stripe webhook confirms checkout.session.completed.</description>
    <label>Paid Date</label>
    <type>DateTime</type>
</CustomField>