force-app/main/default/objects/Invoice/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>How this Invoice is being paid. Stripe = card / online checkout. SEPA = SEPA Direct Debit (DACH B2B standard). Bank_Transfer = Net 30 / Net 60 invoice + bank transfer reconciled via CAMT.053. Wire = international wire. Demo uses Stripe by default; SAP Payment Reconciliation (ADR-025) populates SEPA / Bank_Transfer when CAMT.053 reconciles match.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
                <default>true</default>
                <label>Stripe (Card)</label>
            </value>
            <value>
                <fullName>SEPA</fullName>
                <label>SEPA Direct Debit</label>
            </value>
            <value>
                <fullName>Bank_Transfer</fullName>
                <label>Bank Transfer (Net 30-60)</label>
            </value>
            <value>
                <fullName>Wire</fullName>
                <label>International Wire</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>