force-app/main/default/objects/Invoice/fields/SAP_Payment_Posted_At__c.field-meta.xml
<CustomField>
    <fullName>SAP_Payment_Posted_At__c</fullName>
    <description>When SAP posted the payment receipt to the Invoice's accounts receivable line. Sourced from the CAMT.053 ValueDate (when the bank actually credited the account, not when SAP processed the file). Used to compute Days-Sales-Outstanding and ageing reports.</description>
    <label>SAP Payment Posted At</label>
    <type>DateTime</type>
</CustomField>