force-app/main/default/objects/Invoice/fields/SAP_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>SAP_Payment_Reference__c</fullName>
    <description>Bank transaction reference id from the CAMT.053 statement that closed this Invoice. Used to audit the SAP-side reconciliation match. Format is bank-specific (BIC + value-date + sequence number). Populated by SapPaymentReconciliationService when a CAMT line matches this Invoice by amount + reference.</description>
    <externalId>true</externalId>
    <label>SAP Payment Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>