force-app/main/default/objects/Invoice/fields/SAP_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>SAP_Tax_Amount__c</fullName>
    <description>Tax amount calculated by the SAP-side determination path (SapTaxCalculationService — ADR-024). Coexists with the native commercetax.TaxEngineAdapter chain that runs on Invoice generation; this field is the SAP-parallel reading for production-readiness verification. Populated as a side-effect of SapTaxCalculationService.calculateForInvoice; null until the service is run.</description>
    <label>SAP Tax Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>