force-app/main/default/objects/Invoice/fields/SAP_Tax_Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>SAP_Tax_Calculated_At__c</fullName>
    <description>Timestamp of the most recent SapTaxCalculationService run for this Invoice. Used in audit reports + Integration Health dashboard to spot stale tax data when downstream events (e.g. customer address change) should invalidate the SAP-side rate.</description>
    <label>SAP Tax Calculated At</label>
    <type>DateTime</type>
</CustomField>