force-app/main/default/objects/Invoice/fields/SAP_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>SAP_Tax_Rate__c</fullName>
    <description>Tax rate (percent) returned by SapTaxCalculationService. Examples: 19.00 for DE standard VAT, 20.00 for AT, 7.70 for CH, 21.00 for NL, 20.00 for FR. Picks up reduced rates (7% DE for some product categories) once the SAP_Material_Number__c is populated with reduced-rate-classified products.</description>
    <label>SAP Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>