force-app/main/default/objects/Invoice/fields/Stripe_Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_Id__c</fullName>
    <description>Stripe Checkout Session ID returned by Stripe after payment link is generated. Used to correlate webhook events back to this Invoice.</description>
    <externalId>true</externalId>
    <label>Stripe Payment Intent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>