force-app/main/default/objects/Invoice/fields/Stripe_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Status__c</fullName>
    <description>Custom payment lifecycle status maintained by MuleSoft Stripe integration (independent of native Invoice Status which is restricted).</description>
    <label>Stripe Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>