force-app/main/default/objects/Invoice/fields/Stripe_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_URL__c</fullName>
    <description>Stripe Checkout URL populated by MuleSoft after Generate Payment Link is clicked. Customer clicks this URL to pay.</description>
    <label>Stripe Payment URL</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>