force-app/main/default/objects/Invoice/fields/Tax_Engine_Used__c.field-meta.xml
<CustomField>
    <fullName>Tax_Engine_Used__c</fullName>
    <description>Which engine path produced the SAP_Tax_Amount__c reading. SAP_API = real SAP S/4HANA call succeeded; SAP_FALLBACK_TABLE = sandbox license-gated the SAP tax endpoint and the service fell back to a country-based deterministic rate lookup (per ADR-024). Production with full SAP licensing should always show SAP_API.</description>
    <label>Tax Engine Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP_API</fullName>
                <label>SAP API (S/4HANA)</label>
            </value>
            <value>
                <fullName>SAP_FALLBACK_TABLE</fullName>
                <label>SAP Fallback (Country Table)</label>
            </value>
            <value>
                <fullName>SF_NATIVE_ADAPTER</fullName>
                <label>SF Native commercetax Adapter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>